# makao

./: CMakeLists.txt  main.cpp  readme.md
game_elements/headers/: Cards.h  Deck.h  Player.h  Stack.h
game_elements/sources/: Cards.cpp  Deck.cpp  Player.cpp  Stack.cpp
headers/: Card.h  Cards.h  Deck.h  GameBoard.h  Player.h  Stack.h
resources/gui/headers/: Board.h  Button.h  Menu.h
resources/gui/sources/: Board.cpp  Button.cpp  Menu.cpp
sources/: Card.cpp  Cards.cpp  Deck.cpp  GameBoard.cpp  Player.cpp  Stack.cpp
